attempt to fix calculator mobile responsive display on ios

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
 }
 
 .calculator {
