--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,6 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: aliceblue;
-  min-height: -webkit-fill-available;
 }
 
 a {
